package com.flyread.file.export.model;

/**
 * @author by hongbf on 2018/2/26.
 */
public class ExportResponse {
    private String path;

    public String getPath() {
        return path;
    }

    public void setPath(String path) {
        this.path = path;
    }
}
